done with styling of vigenere

--- a/vigenere-cipher/index.html
+++ b/vigenere-cipher/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Vigenère Cipher — HTML version</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main id="app" aria-labelledby="title">
